updated code rendering

--- a/frontend/src/views/annotation/DocumentRenderer/DocumentRenderer.css
+++ b/frontend/src/views/annotation/DocumentRenderer/DocumentRenderer.css
@@ -1,76 +1,71 @@
 .mark {
-    position:absolute;
-    width:100%;
-    top:0;
-    left:0;
-    z-index: -1;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
 }
 
 .mark.start {
-    border-top-left-radius: 6px;
-    border-bottom-left-radius: 6px;
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
 }
 
 .mark.end {
-    border-top-right-radius: 6px;
-    border-bottom-right-radius: 6px;
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
 }
 
 .tok {
-    position: relative;
+  position: relative;
 }
 
 .text {
-    white-space: nowrap;
+  white-space: nowrap;
+  position: relative;
+  z-index: 1;
 }
 
 .hovered .text {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 rect.hovered {
-    fill: #ffff0088;
+  fill: #ffff0088;
 }
 
 .spangroup {
-    user-select: none;
-    font-size: 14px;
-    white-space: nowrap;
-}
-
-.spangroup.inline {
-    vertical-align: top;
-    margin-left: 4px;
+  user-select: none;
+  white-space: nowrap;
+  position: relative;
+  z-index: 1;
 }
 
 .spangroup.above {
-    position: absolute;
-    bottom: 100%;
-    left: 0;
-    line-height: 12px;
-    white-space: nowrap;
-    user-select: auto;
-    z-index: -1;
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  line-height: 12px;
+  white-space: nowrap;
+  user-select: auto;
 }
 
 .spangroup > span {
-    margin-right: 4px;
+  margin-left: 2px;
 }
 
 .spangroup.inline > span {
-    border: 1px solid black;
-    border-radius: 4px;
+  font-size: calc(75%);
 }
 
 .hoversentence:hover {
-    background-color: rgba(0, 255, 255, 0.5);
-    cursor: pointer;
+  background-color: rgba(0, 255, 255, 0.5);
+  cursor: pointer;
 }
 
 .filterhighlight {
-    background-color: yellow;
+  background-color: yellow;
 }
 
 .jumphighlight {
-    background-color: lightgreen;
+  background-color: lightgreen;
 }
